{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 368,
  "lineage": "3597fd07-494f-66b6-adaa-e04ba988445b",
  "resources": [
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkInterfaces/uat-nic",
            "internal_domain_name_suffix": "cmrpsatts54upgwz4r2isicpue.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/publicIPAddresses/myPublicIP_master",
                "subnet_id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/virtualNetworks/uat-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "uat-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "uat-resources"
          },
          "dependencies": [
            "module.box.module.network.azurerm_public_ip.Master_public_ip",
            "module.box.module.network.azurerm_subnet.internal",
            "module.box.module.network.azurerm_virtual_network.main",
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkInterfaces/uat-slavenic",
            "internal_domain_name_suffix": "cmrpsatts54upgwz4r2isicpue.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration2",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/publicIPAddresses/myPublicIP_slave",
                "subnet_id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/virtualNetworks/uat-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "uat-slavenic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "uat-resources"
          },
          "dependencies": [
            "module.box.module.network.azurerm_public_ip.Slave_public_ip",
            "module.box.module.network.azurerm_subnet.internal",
            "module.box.module.network.azurerm_virtual_network.main",
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "MasterAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkInterfaces/uat-nic|/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkInterfaces/uat-nic",
            "network_security_group_id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
          },
          "dependencies": [
            "module.box.module.network.azurerm_network_interface.main",
            "module.box.module.network.azurerm_network_security_group.my_terraform_nsg_master",
            "module.box.module.network.azurerm_public_ip.Master_public_ip",
            "module.box.module.network.azurerm_subnet.internal",
            "module.box.module.network.azurerm_virtual_network.main",
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "SlaveAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkInterfaces/uat-slavenic|/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkInterfaces/uat-slavenic",
            "network_security_group_id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
          },
          "dependencies": [
            "module.box.module.network.azurerm_network_interface.slave",
            "module.box.module.network.azurerm_network_security_group.my_terraform_nsg_slave",
            "module.box.module.network.azurerm_public_ip.Slave_public_ip",
            "module.box.module.network.azurerm_subnet.internal",
            "module.box.module.network.azurerm_virtual_network.main",
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_terraform_nsg_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "eastus",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "uat-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_terraform_nsg_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "eastus",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "uat-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Master_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/publicIPAddresses/myPublicIP_master",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.173.166.165",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP_master",
            "resource_group_name": "uat-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Slave_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/publicIPAddresses/myPublicIP_slave",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.173.166.119",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP_slave",
            "resource_group_name": "uat-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/virtualNetworks/uat-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "uat-resources",
            "virtual_network_name": "uat-network"
          },
          "dependencies": [
            "module.box.module.network.azurerm_virtual_network.main",
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.box.module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "02f92213-9773-47fd-9ad9-f47889204fa4",
            "id": "/subscriptions/3f6f5ec3-1e5e-44fa-9d39-a4c5f25642e9/resourceGroups/uat-resources/providers/Microsoft.Network/virtualNetworks/uat-network",
            "location": "eastus",
            "name": "uat-network",
            "resource_group_name": "uat-resources"
          },
          "dependencies": [
            "module.box.module.rg.azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}